feat: Implement main script and package structure for pymodern

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,15 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = ["copier>=9.8.0", "pyyaml>=6.0.2", "rich>=14.0.0"]
 
+[tool.setuptools.packages.find]
+include = ["pymodern*"]
+namespaces = false
+
 [dependency-groups]
 dev = ["pre-commit>=4.2.0"]
+
+[project.scripts]
+pymodern = "pymodern.__main__:main"
 
 [tool.ruff.lint]
 select = ["ALL"]
