refactor: Update copier configuration to streamline project settings and introduce advanced options

--- a/copier.yml
+++ b/copier.yml
@@ -3,11 +3,6 @@ project_name:
   help: The name of the project, use lowercase and '-' as separator(e.g. "my-project")
   default: "my-project"
 
-import_name:
-  type: str
-  help: The import name of the project, usually same as project_name but with '_' as separator
-  default: "{{project_name.lower().replace('-', '_')}}"
-
 project_description:
   type: str
   help: The description of the project(e.g. "A short description of the project")
@@ -26,27 +21,12 @@ email:
 github_username:
   type: str
   help: The username/organization of the github repository(e.g. "johndoe")
-  default: "unknown"
-
-project_version:
-  type: str
-  help: The current version of the project(e.g. "0.1.0")
-  default: "0.0.1"
+  default: "{{ author.lower().replace(' ', '-') }}"
 
 min_python_version:
   type: str
   help: The minimum version of Python supported by the project
   default: "3.10"
-
-max_python_version:
-  type: str
-  help: The maximum version of Python supported by the project("no limit" means don't set a limit)
-  default: "no limit"
-
-dev_python_version:
-  type: str
-  help: The version of Python used for development
-  default: "{{ min_python_version }}"
 
 license:
   type: str
@@ -70,13 +50,7 @@ copyright_year:
 mkdocs:
   type: bool
   help: Whether to use mkdocs to build the documentation
-  default: true
-
-mkdocstring:
-  type: bool
-  help: Whether to use mkdocstring to generate the documentation from the code
-  default: true
-  when: "{{ mkdocs }}"
+  default: false
 
 pre_commit_hooks:
   type: bool
@@ -86,44 +60,93 @@ pre_commit_hooks:
 pytest:
   type: bool
   help: Whether to use pytest to run the tests
-  default: true
+  default: false
+
+github_issues_template:
+  type: bool
+  help: Whether to use github issues template
+  default: false
 
 github_actions:
   type: bool
   help: Whether to use github actions for CI/CD
+  default: false
+
+# ================================
+# Advanced settings
+# ================================
+
+advanced_settings:
+  type: bool
+  help: Whether to show advanced settings
+  default: false
+
+import_name:
+  type: str
+  help: The import name of the project, default is same as project_name but with '_' as separator
+  default: "{{project_name.lower().replace('-', '_')}}"
+  when: "{{ advanced_settings }}"
+
+project_version:
+  type: str
+  help: The current version of the project(e.g. "0.1.0")
+  default: "0.0.1"
+  when: "{{ advanced_settings }}"
+
+max_python_version:
+  type: str
+  help: The maximum version of Python supported by the project("no limit" means don't set a limit)
+  default: "no limit"
+  when: "{{ advanced_settings }}"
+
+dev_python_version:
+  type: str
+  help: The version of Python used for development
+  default: "{{ min_python_version }}"
+  when: "{{ advanced_settings }}"
+
+mkdocstring:
+  type: bool
+  help: Whether to use mkdocstring to generate the documentation from the code
   default: true
+  when: "{{ mkdocs and advanced_settings }}"
 
 git_workflow:
   type: str
   help: The git workflow to use
   default: "github-flow"
-  when: "{{ github_actions }}"
+  when: "{{ github_actions and advanced_settings }}"
   choices:
     - github-flow
     - gitflow
-
-bump_version:
-  type: bool
-  help: Whether to bump the version automatically
-  default: false
-  when: "{{ github_actions }}"
-
-release_to_github:
-  type: bool
-  help: Whether to release the project to github
-  default: false
-  when: "{{ github_actions }}"
 
 publish_to_pypi:
   type: bool
   help: Whether to publish the project to pypi
   default: false
-  when: "{{ github_actions }}"
+  when: "{{ github_actions and advanced_settings }}"
+
+bump_version:
+  type: bool
+  help: Whether to bump the version automatically
+  default: false
+  when: "{{ github_actions and advanced_settings }}"
+
+release_to_github:
+  type: bool
+  help: Whether to release the project to github
+  default: false
+  when: "{{ github_actions and advanced_settings }}"
 
 justfile:
   type: bool
   help: Whether to generate a justfile with common project tasks
-  default: true
+  default: false
+  when: "{{ advanced_settings }}"
+
+# ================================
+# Private settings
+# ================================
 
 newest_python_version:
   type: str
