--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,18 @@ dependencies = [
     "typer>=0.17.3",
 ]
 
-[tool.setuptools.packages.find]
-include = ["pymodern*"]
-namespaces = false
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build]
+packages = ["pymodern"]
+
+[tool.hatch.build.targets.sdist.force-include]
+"project" = "pymodern/template"
+
+[tool.hatch.build.targets.wheel.force-include]
+"project" = "pymodern/template"
 
 [dependency-groups]
 dev = ["pre-commit>=4.2.0"]
